# eeg-fft

./: .gitignore  LICENSE  README.md  bdf.py  edf.py  fft.py  meson.build  meson_options.txt  package.sh.in  plot_signal.py  plot_signal_gedf.py  run-ldconfig.sh.in
docs/: meson.build
docs/reference/: meson.build
docs/reference/libgedf/: .meson.build.swp  libgedf-docs.xml  meson.build
include/: edf-bdf-file.h  edf-bdf-header.h  edf-bdf-signal.h  edf-file.h  edf-header.h  edf-record-priv.h  edf-signal-private.h  edf-signal.h  edf-size-priv.h  gedf.h  meson.build
python_tests/: importedf.py.in  meson.build  test_edffile.py  test_edfheader.py  test_edfsignal.py
src/: .meson.build.swp  edf-bdf-file.c  edf-bdf-header.c  edf-bdf-signal.c  edf-file.c  edf-header.c  edf-record-priv.c  edf-signal.c  meson.build
subprojects/: glib.wrap  libffi.wrap  zlib.wrap
test/: bdf-file-test.c  file-test.c  header-test.c  meson.build  signal-test.c  suites.h  test-macros.h  unit-test.c
